# DeadBeef-X11-Overlay-Plagin

./: .gitignore  CMakeLists.txt  overlay.c
overlay/: CMakeLists.txt  main.c  utils.h
plagin/: CMakeLists.txt  overlay.c
